add prettier format
